<resources>
    <string name="app_name">SSFitness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grop_name_hint">Group Name</string>
    <string name="cg_select_members">SELECT GROUP MEMBERS</string>
    <string name="cg_edit_text_err">Please enter group name</string>
    <string name="delete_label">Delete</string>
    <string name="delete_msg_txt">Delete Message?</string>
    <string name="cancel_label">Cancel</string>
    <string name="current_tdee">Current consumption</string>
    <string name="goal_txt">Your Goal</string>
    <string name="tedd_txt">Total Daily Energy Expenditure</string>
</resources>
