<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp">

        <TextView
            android:id="@+id/dialog_delete_msg_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/delete_msg_txt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/dialog_delete_msg_txt">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_delete_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/delete_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_cancel_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="1"
                android:padding="@dimen/_8sdp"
                android:text="@string/cancel_label"
                android:backgroundTint="@color/colorPrimaryDark"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>